# mspi_timeclock

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
public/: grist-plugin-api.js  message.txt
src/: App.css  App.jsx  main.jsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Announcements.jsx  Carousel.jsx  HoursGrid.jsx  MessageBoard.jsx  Roster.jsx  ScanNotify.jsx
src/lib/: barcode.js
